# deep-vars

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yaml
src/deep_vars/: __init__.py  deep_vars.py
src/deep_vars/handlers/: __init__.py  _base.py  _container.py  callable.py  hide.py  loop.py  loop_dict.py  process.py  show.py
tests/: test_deep_vars.py  utils.py
