[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deep-vars"
description = "Recursive `vars` for all objects."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name="Vedran Sego", email = "vsego@vsego.org" },
]
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
keywords = []
dynamic = ["version"]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/vsego/deep-vars"
"Bug Tracker" = "https://github.com/vsego/deep-vars/issues"
"Changelog" = "https://github.com/vsego/deep-vars/blob/master/CHANGELOG.md"

[tool]

[tool.hatch.version]
path = "src/deep_vars/version.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
]

[tool.hatch.build.targets.wheel]
packages = ["src/deep_vars"]
